Mejoras de plugins

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,5 +3,33 @@
   "prettier.bracketSpacing": true,
   "prettier.printWidth": 120,
   "prettier.tabWidth": 4,
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "flutter.lsp.initialization.closingLabels": false,
+  "suggest.completionItemKindLabels": {
+    "method": "",
+    "function": "",
+    "variable": "",
+    "field": "ﰠ",
+    "typeParameter": "",
+    "constant": "",
+    "class": "ﴯ",
+    "interface": "",
+    "struct": "פּ",
+    "event": "",
+    "operator": "",
+    "module": "",
+    "property": "ﰠ",
+    "enum": "",
+    "reference": "",
+    "keyword": "",
+    "file": "",
+    "folder": "",
+    "color": "",
+    "unit": "塞",
+    "snippet": "",
+    "text": "",
+    "constructor": "",
+    "value": "",
+    "enumMember": ""
+  }
 }
